# pto-einsum

./: .gitignore  IMPLEMENTATION.md  README.md  implementation.md  pyproject.toml  requirements.txt  run_sim.sh  run_ssh.sh  setup.cfg  setup.py
benchmarks/: bench_einsum.py  bench_linear_attention.py  bench_llm_contractions.py  bench_transpose.py  debug_einsum.py  profile_phase_overlap.py
benchmarks/base/: bench_einsum.py  bench_transpose.py
benchmarks/complex/: bench_linear_attention.py  bench_llm_contractions.py
benchmarks/complex/gdn/: bench_gdn_4way.py  einsum_gdn.py  mega_gdn.py  pto_gdn.py  ref_gdn.py  test_gdn_e2e.py  test_gdn_single_kernels.py  utils.py
benchmarks/complex/kda/: bench_kda_4way.py  einsum_kda.py  mega_kda.py  pto_kda.py  ref_kda.py  utils.py
src/pto_einsum/: __init__.py  builder.py  templates.py
src/pto_einsum/include/: cpu_einsum.h  pto_einsum.h  pto_einsum_elementwise.h  pto_einsum_matmul.h  pto_einsum_transpose.h  pto_einsum_utils.h
tests/: reference.py  test_einsum.py  test_llm_ops.py  test_matmul.py  test_python_einsum.py  test_split_npu.py  test_transpose.py  test_transpose_npu.py
