[metadata]
name = pto-einsum
version = 0.1.0
description = JIT-compiled einsum for Ascend NPUs (a2a3) built on the PTO-ISA
long_description = file: README.md
long_description_content_type = text/markdown
author = Vladimir Loncar
author_email = vlada.loncar@gmail.com
keywords = einsum, ascend, npu, pto-isa, cann, tensor-contraction

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
# torch_npu additionally requires a matching CANN toolkit and Ascend driver on
# the host; it cannot be installed on a non-Ascend machine. See README.md.
install_requires =
    numpy>=2.0
    torch>=2.10
    torch_npu>=2.10

[options.packages.find]
where = src

[options.package_data]
# Bundle the C++ kernel headers; they are read at runtime to JIT-compile kernels.
pto_einsum = include/*.h

[options.extras_require]
dev =
    pytest>=8
    matplotlib>=3.8
